Fix favicon and touch icon

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <meta name="theme-color" content="#0b1b2b">
 
   <link rel="canonical" href="https://veldra.org/">
-  <link rel="icon" type="image/png" href="/assets/brand/favicon.png?v=20260120">
-  <link rel="apple-touch-icon" href="/assets/brand/veldra-mark.png?v=20260120">
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/brand/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/brand/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/brand/apple-touch-icon.png">
+
 
   <meta property="og:title" content="Veldra">
   <meta property="og:description" content="Policy based template verification for Bitcoin mining pools. Deterministic verdicts with reason codes and policy context.">
